Added some fields for users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <%= i.email %><br>
 <% end %>
 
-<%= t('hello') %>
+<%= t('congradulation') %>
 <br>
 
 <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>   
