--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
 
   Logged in as <strong><%= current_user.email %></strong>.	</br>
 	
-  <%= link_to 'Edit profile', edit_user_path(current_user), :class => 'navbar-link' %> |
+  <%= link_to "Main", root_path, :class => 'navbar-link' %> |
+  <%= link_to "Events", events_path, :class => 'navbar-link' %> |
+  <%= link_to "Edit profile", edit_user_path(current_user), :class => 'navbar-link' %> |
   <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  <br>
 <% else %>
   <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %> | 
