009 Added join/unfollow button for events events controller index & show views

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -14,7 +14,11 @@
 			<td><%= e.gender %>
 			<td><%= e.etype %></td>
 			<td><%= e.description %></td>
-			<td></td>
+			<% if current_user.events.include?(e) then %>
+			<td><%= link_to "unfollow", unfollow_event_path(e) %></td>
+			<% else %>
+			<td><%= link_to "join", join_event_path(e) %></td>
+			<% end %>
 		</tr>
 	<% end %>
 	<tr align="center">
