--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 			<td><%= e.gender %>
 			<td><%= e.etype %></td>
 			<td><%= e.description %></td>
-			<td><%= link_to "unfollow", unfollow_event_path(e)%></td>>
+			<td><%= link_to "unfollow", unfollow_event_path(e)%></td>
 		</tr>
 	<% end %>
 </table>
