014 Added HAML & Edit page changed - all html views renamed to old - added new HAML views

--- a/app/views/users/old_index.html.erb
+++ b/app/views/users/old_index.html.erb
@@ -9,7 +9,7 @@
 	<% @users.each do |u| %>
 		<tr align="center">
 			<td><%= link_to u.name, user_path(u) %></td>
-			<td><%= u.surname %>
+			<td><%= u.surname %></td>
 			<td><%= u.email %></td>
 		</tr>
 	<% end %>
