014 Gem carmen Added country & city  dropdown menu for edit user's page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -26,6 +26,16 @@
   = @user.gender
 %br
 .col-sm-1
+  Country:
+.col-sm-3
+  = @user.country_
+%br
+.col-sm-1
+  City:
+.col-sm-3
+  = @user.city_
+%br
+.col-sm-1
   Phone:
 .col-sm-3
   = @user.phone
