--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -2,28 +2,30 @@
 = form_for @event do |e|
   .form-group
     = e.label :name, class: "col-sm-1 control-label"
-    .col-sm-2
+    .col-sm-3
       = e.text_field :name, autofocus: true, class: 'form-control'
   %br
   %br
   .form-group
     = e.label :date, class: "col-sm-1 control-label"
-    .col-sm-2
+    .col-sm-3
       = e.date_select :date, class: 'form-control'
   %br
   .form-group
     = e.label :time, class: "col-sm-1 control-label"
-    .col-sm-2
+    .col-sm-3
       = e.time_select :time, class: 'form-control'
     %br
   .form-group
     = e.label :description, class: "col-sm-1 control-label"
-    .col-sm-2
-      = e.text_field :description, class: 'form-control'
+    .col-sm-3
+      = e.text_area :description, class: 'form-control'
+    %br
+    %br
     %br
   .form-group
     = e.label :gender, class: 'col-sm-1 control-label'
-    .col-sm-2
+    .col-sm-3
       = radio_button("user", "gender", "Male")
       = label_tag :gender, "Male"
       = radio_button("user", "gender", "Female")
@@ -33,7 +35,7 @@
     %br
   .form-group
     = e.label :number, class: 'col-sm-1 control-label'
-    .col-sm-2
+    .col-sm-3
       = e.number_field :number, class: 'form-control'
     %br
   .form-group
@@ -57,9 +59,10 @@
       = radio_button("event", "etype", "NA")
       = label_tag :etype, "Not sure"
     %br
+    %br
   .form-group
     = e.label :photo, class: "col-sm-1"
-    .col-sm-2
+    .col-sm-3
       = e.file_field :photo
     %br
   = e.submit "Save", class: "btn btn-primary"
