--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -45,6 +45,36 @@
     .col-sm-1
       = e.number_field :agemax, class: 'form-control'
     %br
+    %br
+    / Set height and width with CSS
+    #googleMap{:style => "height:300px;width:450px;"}
+    / Add Google Maps
+    %script{:src => "http://maps.googleapis.com/maps/api/js"}
+    :javascript
+      var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+      
+      function initialize() {
+      var mapProp = {
+      center:myCenter,
+      zoom:12,
+      scrollwheel:true,
+      draggable:true,
+      mapTypeId:google.maps.MapTypeId.ROADMAP
+      };
+      
+      var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+      
+      var marker = new google.maps.Marker({
+      map: map,
+      draggable: true,
+      animation: google.maps.Animation.DROP,
+      position:myCenter,
+      });
+      
+      marker.setMap(map);
+      }
+      
+      google.maps.event.addDomListener(window, 'load', initialize);
   .form-group
     = e.label :photo, class: "col-sm-1"
     .col-sm-3
