--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -36,4 +36,30 @@
           %tr
             %td= link_to "Edit", edit_event_path, class: "btn btn-primary"
             %td= link_to "Delete", @event, method: :delete, class: "btn btn-primary"
+/ Set height and width with CSS
+#googleMap{:style => "height:400px;width:40%;"}
+/ Add Google Maps
+%script{:src => "http://maps.googleapis.com/maps/api/js"}
+:javascript
+  var myCenter = new google.maps.LatLng(#{@event.latitude}, #{@event.longitude});
+  
+  function initialize() {
+  var mapProp = {
+  center:myCenter,
+  zoom:12,
+  scrollwheel:true,
+  draggable:true,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+  
+  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+  
+  var marker = new google.maps.Marker({
+  position:myCenter,
+  });
+  
+  marker.setMap(map);
+  }
+  
+  google.maps.event.addDomListener(window, 'load', initialize);
 = commontator_thread(@event)
