--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -39,27 +39,23 @@
 / Set height and width with CSS
 #googleMap{:style => "height:400px;width:40%;"}
 / Add Google Maps
-%script{:src => "http://maps.googleapis.com/maps/api/js"}
+
 :javascript
-  var myCenter = new google.maps.LatLng(#{@event.latitude}, #{@event.longitude});
-  
-  function initialize() {
-  var mapProp = {
-  center:myCenter,
-  zoom:12,
-  scrollwheel:true,
-  draggable:true,
-  mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  
-  var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-  
-  var marker = new google.maps.Marker({
-  position:myCenter,
-  });
-  
-  marker.setMap(map);
+  var map;
+  function initMap() {
+    var myCenter = {lat: #{@event.latitude}, lng: #{@event.longitude}};
+    map = new google.maps.Map(document.getElementById('googleMap'), {
+      center: myCenter,
+      zoom: 12
+    });
+
+    var marker = new google.maps.Marker({
+      position: myCenter,
+      map: map,
+      title: 'Hello World!'
+    });
   }
-  
-  google.maps.event.addDomListener(window, 'load', initialize);
+%script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"}
+
+
 = commontator_thread(@event)
