--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -89,4 +89,4 @@
       .col-sm-5
         = e.file_field :photo
       %br
-    = e.submit "Save", class: "btn btn-primary"
+    = e.submit "Save", class: "btn btn-confirm"
