--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -25,6 +25,8 @@ text-decoration: none; }
 .btn.btn-confirm:hover { background-color: #98FB98; color: black; }
 .btn.btn-add { font-size: 10px; font-family: 'Candal', sans-serif; font-weight: bold; text-decoration: none; user-select: none;
  outline: none; background-color: #5F9EA0; border-radius: 0px; color: #98FB98; }
+.btn.btn-del { font-size: 10px; font-family: 'Candal', sans-serif; font-weight: bold; text-decoration: none; user-select: none;
+ outline: none; background-color: #98FB98; border-radius: 0px; color: #5F9EA0; }
 
 table.event_list td { width: 5%; margin: 0; padding: 1px 0px 1px 0px; text-align: left; font-family: 'Candal', sans-serif; }
 table.event_list th { width: 5%; font-family: 'Candal', sans-serif; font-weight: bold; }
