--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,44 +1,51 @@
 .content
   .sub_header
     = @event.name
-  %br
-    = if current_user.events.include?(@event) then                              |
-      link_to "unfollow", unfollow_event_path(@event), class: "btn btn-add"     |
-      else                                                                      |
-      link_to "join", join_event_path(@event), class: "btn btn-add"             |
-      end                                                                       |
-    %br
+  %table.event_list{:width => "50%", :display => "inline"}
+    %tr
+      %th Date:
+      %td= @event.date 
+    %tr
+      %th Time:
+      %td= @event.time
+    %tr
+      %th Type:
+      %td
+    %tr
+      %th Description:
+      %td= @event.description
+    %tr
+      %th Gender:
+      %td= @event.gender
+    %tr
+      %th Number:
+      %td= @event.number
+    %tr
+      %th Age:
+      %td
+        = @event.agemin
+        \- #{@event.agemax}
+    %tr
+      %th Tags:
+      %td
+        - if @event.tags.empty?
+          No tags
+        - else
+          - @event.tags.each do |t|
+            = t.name
       %br
-        %br
-          %table.event_list{:width => "50%", :display => "inline"}
-            %tr
-              %th Date:
-              %td= @event.date 
-            %tr
-              %th Time:
-              %td= @event.time
-            %tr
-              %th Type:
-              %td
-            %tr
-              %th Description:
-              %td= @event.description
-            %tr
-              %th Gender:
-              %td= @event.gender
-            %tr
-              %th Number:
-              %td= @event.number
-            %tr
-              %th Age:
-              %td
-                = @event.agemin
-                \- #{@event.agemax}
-          = image_tag(@event.photo.url(:thumb))
-          %br
-          %br
-          = link_to "Edit", edit_event_path, class: "btn btn-confirm"
-          = link_to "Delete", @event, method: :delete, class: "btn btn-confirm" 
+      %br
+      %br
+  = image_tag(@event.photo.url(:thumb))
+  %br
+  %br
+  = if current_user.events.include?(@event) then                              |
+    link_to "unfollow", unfollow_event_path(@event), class: "btn btn-confirm" |
+    else                                                                      |
+    link_to "join", join_event_path(@event), class: "btn btn-confirm"         |
+    end                                                                       |
+  = link_to "Edit", edit_event_path, class: "btn btn-confirm"
+  = link_to "Delete", @event, method: :delete, class: "btn btn-confirm" 
   / Set height and width with CSS
   #googleMap{:style => "height:600px;width:100%;"}
   / Add Google Maps
