--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -30,3 +30,20 @@ text-decoration: none; }
 
 table.event_list td { width: 5%; margin: 0; padding: 1px 0px 1px 0px; text-align: left; font-family: 'Candal', sans-serif; }
 table.event_list th { width: 5%; font-family: 'Candal', sans-serif; font-weight: bold; }
+
+#sortable1, #sortable2 {
+    border: 1px solid #eee;
+    width: 142px;
+    min-height: 20px;
+    list-style-type: none;
+    margin: 0;
+    padding: 5px 0 0 0;
+    float: left;
+    margin-right: 10px;
+}
+#sortable1 li, #sortable2 li {
+    margin: 0 5px 5px 5px;
+    padding: 5px;
+    font-size: 1.2em;
+    width: 120px;
+}
