--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,10 +4,8 @@
 		%title Mngr
 		= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true
-		%link{:href => "//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css", :rel => "stylesheet"}
-		%script{:src => "//code.jquery.com/jquery-1.10.2.js"}
 		%script{:src => "//code.jquery.com/ui/1.11.4/jquery-ui.js"}
-		%script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')
+		%script{:src => 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'}
 		= csrf_meta_tags
 	%body
 		.row
