--- a/app/views/commontator/comments/_actions.html.erb
+++ b/app/views/commontator/comments/_actions.html.erb
@@ -19,8 +19,7 @@
 <% if can_delete %>
   <% is_deleted = comment.is_deleted? %>
   <% del_string = is_deleted ? 'undelete' : 'delete' %>
-  <%= link_to t("commontator.comment.actions.#{del_string}"),
-              commontator.polymorphic_path([del_string, comment]),
+  <%= link_to t("commontator.comment.actions.#{del_string}"), commontator.polymorphic_path([del_string, comment]),
               :confirm => (!is_deleted ? t('commontator.comment.actions.confirm_delete') : nil),
               :method => :put,
               :id => "comment_#{comment.id.to_s}_#{del_string}_link",
