--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,83 +1,84 @@
-.content 
-  %br
-    = image_tag(@user.avatar.url(:thumb), class: 'img-circle')
-  .col-sm-1
-    Name:
+%br
+.col-sm-1
+  Name:
+.col-sm-3
+  = @user.name
+.user_avatar
+  = image_tag(@user.avatar.url(:medium))
+  / = image_tag(@user.avatar.url(:medium), class: 'img-circle')
+%br
+.col-sm-1
+  Surname:
+.col-sm-3
+  = @user.surname
+%br
+.col-sm-1
+  Email:
+.col-sm-3
+  = @user.email
+%br
+.col-sm-1
+  Birthday:
+.col-sm-3
+  = @user.bday
+%br
+.col-sm-1
+  Gender:
+.col-sm-3
+  = @user.gender
+%br
+.col-sm-1
+  Country:
+.col-sm-3
+  = @user.country_
+%br
+.col-sm-1
+  City:
+.col-sm-3
+  = @user.city_
+%br
+.col-sm-1
+  Phone:
+.col-sm-3
+  = @user.phone
+%br
+.col-sm-1
+  Hobby:
+.col-sm-3
+  = @user.hobby
+%br
+.col-sm-1
+  About:
+.col-sm-3
+  = @user.about
+%br
+.col-sm-1
+  Tags:
+- if @user.tags.empty?
+  No tags
+- else
   .col-sm-3
-    = @user.name
-  %br
-  .col-sm-1
-    Surname:
-  .col-sm-3
-    = @user.surname
-  %br
-  .col-sm-1
-    Email:
-  .col-sm-3
-    = @user.email
-  %br
-  .col-sm-1
-    Birthday:
-  .col-sm-3
-    = @user.bday
-  %br
-  .col-sm-1
-    Gender:
-  .col-sm-3
-    = @user.gender
-  %br
-  .col-sm-1
-    Country:
-  .col-sm-3
-    = @user.country_
-  %br
-  .col-sm-1
-    City:
-  .col-sm-3
-    = @user.city_
-  %br
-  .col-sm-1
-    Phone:
-  .col-sm-3
-    = @user.phone
-  %br
-  .col-sm-1
-    Hobby:
-  .col-sm-3
-    = @user.hobby
-  %br
-  .col-sm-1
-    About:
-  .col-sm-3
-    = @user.about
-  %br
-  .col-sm-1
-    Tags:
-  - if @user.tags.empty?
-    No tags
-  - else
-    .col-sm-3
-      - @user.tags.each do |t|
-        = t.name
-  %br
-  %br
-  %br
-  = link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm"
-  .sub_header
-    Your events
-  %table.event_list
-    %tr{:align => "center"}
-      %th Name:
-      %th Gender:
-      %th Type:
-      %th Description:
-    - @events.each do |e|
-      %tr{:align => "center"}
-        %td= link_to e.name, event_path(e)
-        %td= e.gender
-        %td
-          - e.tags.each do |t|
-            =t.name
-        %td= e.description
-        %td= link_to "unfollow", unfollow_event_path(e)
-  = paginate @events
+    - @user.tags.each do |t|
+      = t.name
+%br
+%br
+%br
+= link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm"
+.sub_header
+  Your events
+%table.event_list
+  %tr{:align => "center"}
+    %th Name:
+    %th Gender:
+    %th Type:
+    %th Description:
+  - @events.each do |e|
+    %tr
+      %td= link_to e.name, event_path(e)
+      %td= e.gender
+      %td
+        - e.tags.each do |t|
+          =t.name
+      %td= e.description
+      %td= link_to "unfollow", unfollow_event_path(e)
+= paginate @events
