--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -6,11 +6,12 @@
   =require twitter-bootstrap-static/fontawesome
   */
 
-body { 
+html, body { 
   background-color: #E0FFFF;
+  height: 100%;
 }
 
-/*Layout panel*/
+/*Layout control panel*/
 .main_header {
   min-height: 60px;
   background-color: #E0FFFF;
@@ -18,9 +19,9 @@ body {
 }
 .control_panel { 
   width: 100%;
-  margin-bottom: 1em;
+  margin-bottom: 1.0%;
   background-color: #5F9EA0;
-  padding: 1em;
+  padding: 1.0%;
   color: #fff;
   text-align: center;
   font-family: 'Candal', sans-serif;
@@ -28,43 +29,28 @@ body {
 }
 .control_panel a {
   background-color: #5F9EA0;
-  padding: 1em 4em 1em 4em;
-  color: #7FFFD4; font-size: 15.5px;
-  margin-left: -0.5em;
+  padding: 1% 3% 1% 3%;
+  color: #7FFFD4;
+  font-size: 15.5px;
+  margin-left: -0.3%;
   text-decoration: none;
 }
 .control_panel a:hover {
-  padding: 2em 5em 2em 5em;
+  padding: 1.5% 4% 1.5% 4%;
   color: black;
 }
 .control_panel a.active {
   background-color: #7FFFD4;
-  padding: 1em 4em 1em 4em;
+  padding: 1.1% 3.5% 1.1% 3.5%;
   color: #008080;
 }
-.sub_header {
-  font-family: 'Candal', sans-serif;
-  font-weight: bold;
-  font-size: 35px;
-  padding-bottom: 15px;
-  margin-left: 100px;
+/*Content body*/
+.content_wrapper {
+  min-height: 100vh;
+  height: auto !important;
+  height: 100%;
+  padding-bottom: 40px
 }
-.footer {
-  position: fixed;
-  bottom: 0px;
-  min-height: 20px;
-  width: 100%;
-  margin-top: 20px;
-  padding-bottom: 10px;
-  background-color: #5F9EA0;
-  text-align: center;
-  font-family: 'Candal', sans-serif;
-  font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/*Body building*/
 .content {
   width: 60%;
   margin: 0 auto;
@@ -73,15 +59,18 @@ body {
   padding-bottom: 50px;
 }
 .left_side {
+  
   width: 16%;
+  min-width: 250px;
   position: absolute;
-  left: 20px;
+  left: 1%;
   min-height: 800px;
 }
 .right_side {
   width: 16%;
+  min-width: 250px;
   position: absolute;
-  right: 20px;
+  right: 1%;
   min-height: 800px;
 }
 .preview_box1 {
@@ -98,6 +87,27 @@ body {
   height: 400px;
   background-color: #5F9EA0;
   margin-bottom: 20px;
+}
+.footer {
+  position: relative;
+  min-height: 40px;
+  margin-top: -40px;
+  width: 100%;
+  background-color: #5F9EA0;
+  text-align: center;
+  font-family: 'Candal', sans-serif;
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  clear:both;
+}
+/*Inner content style*/
+.sub_header {
+  font-family: 'Candal', sans-serif;
+  font-weight: bold;
+  font-size: 35px;
+  padding-bottom: 15px;
+  margin-left: 100px;
 }
 .user_avatar {
   position: absolute;
