--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,55 +8,56 @@
 		%script{:src => 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'}
 		= csrf_meta_tags
 	%body
-		.main_header
-			.col-md-10
-			.col-md-2
+		.content_wrapper
+			.main_header
+				.col-md-10
+				.col-md-2
+					- if user_signed_in?
+						Logged in as
+						= succeed "." do
+							%strong= current_user.email
+						%br
+						= link_to "Main", root_path, :class => 'navbar-link'
+						|
+						= link_to "Events", events_path, :class => 'navbar-link'
+						|
+						= link_to "Edit profile", edit_user_path(current_user), :class => 'navbar-link'
+						|
+						= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
+						%br
+					- else
+						= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
+						|
+						= link_to "Login", new_user_session_path, :class => 'navbar-link'
+						|
+						= link_to image_tag('icon-tw16.png'), user_omniauth_authorize_path(:twitter) 
+						|
+						= link_to image_tag('icon-fb16.png'), user_omniauth_authorize_path(:facebook) 
+						|
+						= link_to image_tag('icon-vk16.png'), user_omniauth_authorize_path(:vkontakte)
+			- if notice
+				%p.alert.alert-success= notice
+			- if alert
+				%p.alert.alert-danger= alert
+			.control_panel
+				= active_link_to "Main", root_path, :active => :exclusive
 				- if user_signed_in?
-					Logged in as
-					= succeed "." do
-						%strong= current_user.email
-					%br
-					= link_to "Main", root_path, :class => 'navbar-link'
-					|
-					= link_to "Events", events_path, :class => 'navbar-link'
-					|
-					= link_to "Edit profile", edit_user_path(current_user), :class => 'navbar-link'
-					|
-					= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
-					%br
-				- else
-					= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
-					|
-					= link_to "Login", new_user_session_path, :class => 'navbar-link'
-					|
-					= link_to image_tag('icon-tw16.png'), user_omniauth_authorize_path(:twitter) 
-					|
-					= link_to image_tag('icon-fb16.png'), user_omniauth_authorize_path(:facebook) 
-					|
-					= link_to image_tag('icon-vk16.png'), user_omniauth_authorize_path(:vkontakte)
-		- if notice
-			%p.alert.alert-success= notice
-		- if alert
-			%p.alert.alert-danger= alert
-		.control_panel
-			= active_link_to "Main", root_path, :active => :exclusive
-			- if user_signed_in?
-				= active_link_to "Profile", user_path(current_user), :active => :exclusive
-				= active_link_to "Events", events_path, :active => :exclusive
-			= active_link_to "Peoples", root_path, :active => :exclusive
-			= active_link_to "Media", root_path, :active => :exclusive
-			= active_link_to "Help", root_path, :active => :exclusive
-		.left_side
-			.preview_box1
-				%p place for preview newest events
-			.banner_box1
-				%p place for BANNERS
-		.right_side
-			.banner_box1
-				%p place for BANNERS
-			.banner_box2
-				%p place for BANNERS
-		.content
-			= yield
+					= active_link_to "Profile", user_path(current_user), :active => :exclusive
+					= active_link_to "Events", events_path, :active => :exclusive
+				= active_link_to "Peoples", root_path, :active => :exclusive
+				= active_link_to "Media", root_path, :active => :exclusive
+				= active_link_to "Help", root_path, :active => :exclusive
+			.left_side
+				.preview_box1
+					%p place for preview newest events
+				.banner_box1
+					%p place for BANNERS
+			.right_side
+				.banner_box1
+					%p place for BANNERS
+				.banner_box2
+					%p place for BANNERS
+			.content
+				= yield
 		.footer
 			%p footer
