--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -14,8 +14,22 @@ html, body {
 /*Layout control panel*/
 .main_header {
   min-height: 60px;
+  height: auto;
   background-color: #E0FFFF;
   padding-top: 10px;
+}
+.account_links {
+  position: relative;
+  min-width: 250px;
+  width: 25%;
+  padding: 0 1% 0 1%;
+  float: right;
+}
+.logo {
+  position: relative;
+  width: 75%;
+  padding: 0 1% 0 1%;
+  float: left;
 }
 .control_panel { 
   width: 100%;
@@ -46,7 +60,7 @@ html, body {
 }
 /*Content body*/
 .content_wrapper {
-  min-height: 100vh;
+  min-height: 100%;
   height: auto !important;
   height: 100%;
   padding-bottom: 40px
@@ -58,35 +72,27 @@ html, body {
   background-color: #F8F8FF;
   padding-bottom: 50px;
 }
-.left_side {
-  
+.banner {
   width: 16%;
-  min-width: 250px;
+  min-width: 200px;
   position: absolute;
+  background-color: #5F9EA0;
+}
+.box1 {
+  min-height: 400px;
+}
+.box2 {
+  min-height: 400px;
+}
+.box3 {
+  min-height: 300px; 
+  top: 565px; 
+}
+.left {
   left: 1%;
-  min-height: 800px;
 }
-.right_side {
-  width: 16%;
-  min-width: 250px;
-  position: absolute;
+.right {
   right: 1%;
-  min-height: 800px;
-}
-.preview_box1 {
-  height: 350px;
-  background-color: #5F9EA0;
-  margin-bottom: 40px;
-}
-.banner_box1 {
-  height: 300px;
-  background-color: #5F9EA0;
-  margin-bottom: 20px;
-}
-.banner_box2 {
-  height: 400px;
-  background-color: #5F9EA0;
-  margin-bottom: 20px;
 }
 .footer {
   position: relative;
@@ -100,6 +106,27 @@ html, body {
   margin-left: auto;
   margin-right: auto;
   clear:both;
+}
+/*Media*/
+@media (max-width: 1050px){
+  .content {
+    width: 630px;
+  }
+  .left {
+    left: 0%;
+  }
+  .right {
+    right: 0%;
+  }
+}
+@media (max-width: 830px){
+  .content {
+    position: absolute;
+    top: 656px;
+  }
+  .box2 {
+    right: auto;
+  }
 }
 /*Inner content style*/
 .sub_header {
