--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,14 +47,14 @@
 				= active_link_to "Peoples", root_path, :active => :exclusive
 				= active_link_to "Media", root_path, :active => :exclusive
 				= active_link_to "Help", root_path, :active => :exclusive
-			.banner.box1.left
-				%p place for preview newest events
-			.banner.box2.right
-				%p place for BANNERS
+			.banner.box2.left
+				%p BANNER №1
+			.banner.box1.right
+				%p EVENT'S VINDGET
 			.banner.box3.left
-				%p place for BANNERS
+				%p BANNER №2
 			.banner.box3.right
-				%p place for BANNERS
+				%p BANNER №3
 			.content
 				= yield
 		.footer
