--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -60,13 +60,22 @@
       = e.date
       = e.time.strftime("%H:%M")
     .event_name
-      = e.name
-      - e.tags.each do |t|
-        = t.name
+      2
     .event_desc
-      = e.description
+      3
     .event_img
-      = image_tag(e.photo.url(:thumb))
+      4
+/ - @events.each do |e|
+/   .event_el
+/     .event_date
+/       = e.date
+/       = e.time.strftime("%H:%M")
+/     .event_name
+/       = e.name
+/     .event_desc
+/       = e.description
+/     .event_img
+/      = image_tag(e.photo.url(:thumb))
 / %table.event_el
 /   - @events.each do |e|
 /     %tr
