--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -116,7 +116,7 @@ html, body {
 .user_avatar {
   min-width: 300px;
   width: 30%;
-  height: 300px;
+  height: 400px;
   margin: 0% 1.5% 1.5% 0%;
   float: left;
   text-align: center;
@@ -128,6 +128,7 @@ html, body {
   width: 60%;
   float: left;
   left: 300px;
+  padding: 10px 0px 30px 0px;
 }
 .col-1 {
   font-family: 'Candal', sans-serif;
@@ -146,6 +147,7 @@ html, body {
   min-height: 25px;
   float: left;
   padding: 5px 0px 0px 15px;
+  word-wrap: break-word;
 }
 .sub_header {
   width: 100%;
@@ -159,53 +161,74 @@ html, body {
   width: 100%;
   background-color: #E0FFFF;
   height: 20px;
+  display: flex;
+}
+.divider_f {
+  width: 100%;
+  background-color: #E0FFFF;
+  height: 40px;
+  bottom: 0px;
+  margin-bottom: -50px;
 }
 .event_el {
   width: 85%;
-  max-height: 106px;
+  height: 103px;
+  max-height: 103px;
   font-family: 'Candal', sans-serif;
   font-size: 18px;
-  margin: 0px auto 5px auto;
+  margin: 0px auto 10px auto;
   border-width: 3px;
   border-color: #5F9EA0;
   border-style: outset;
 }
 .event_date {
-  display: inline-block;
-  width: 140px;
+  float: left;
+  min-width: 120px;
+  width: 15%;
   height: 100px;
   text-align: center;
   padding-top: 7px;
-  border-width: 3px;
+  border-top: 0px;
   border-color: #5F9EA0;
   border-style: outset;
 }
 .event_name {
-  width: 100px;
+  float: left;
+  min-width: 120px;
+  width: 15%;
   height: 100px;
-  display: inline-block;
   padding-top: 7px;
-  border-width: 3px;
+  border-top: 0px;
   border-color: #5F9EA0;
   border-style: outset;
+  text-align: center;
 }
 .event_desc {
+  float: left;
+  min-width: 200px;
+  max-width: 50%;
+  height: 100px;
+  font-size: 18px;
+  padding-top: 7px;
+  border-right: 0px;
+  border-top: 0px;
+  border-color: #5F9EA0;
+  border-style: outset;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
+}
+.event_img {
+  float: right;
   width: 100px;
   height: 100px;
-  display: inline-block;
-  padding-top: 7px;
-  border-width: 3px;
+  margin-top: -3px;
+  border-top: 0px;
   border-color: #5F9EA0;
   border-style: outset;
 }
-.event_img {
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  padding-top: 7px;
-  border-width: 3px;
-  border-color: #5F9EA0;
-  border-style: outset;
+.pagin_box {
+  text-align: center;
+  font-size: 20px;
 }
 .col-sm-1 {
   font-family: 'Candal', sans-serif;
@@ -215,8 +238,7 @@ html, body {
 .user_edit {
   position: static;
   text-align: center;
-  width: 300px;
-  margin: 30px 0px 5px 0px;
+  margin: 20px 0px 5px 0px;
 }
 .btn.btn-confirm {
   font-size: 20px;
@@ -283,7 +305,20 @@ table.event_list th {
     width: 120px;
     border: 1px solid #5F9EA0;
 }
-
+/*MEDIA WIDTH > 1920px*/
+@media (min-width: 1920px){
+  .content {
+    max-width: 1150px;
+  }
+  .left_side {
+    margin: 0 auto;
+    left: 10%;
+  }
+  .right_side {
+    margin: 0 auto;
+    right: 10%;
+  }
+}
 /*MEDIA WIDTH <1400px*/
 @media (max-width: 1400px){
   /*BODY*/
@@ -293,12 +328,18 @@ table.event_list th {
   .right_side {
     right: 1%;
   }
+  .event_el {
+    width: 90%
+  }
 }
 /*MEDIA WIDTH <1320*/
 @media (max-width: 1320px){
   /*CONTENT*/
   .user_info {
     max-width: 400px;
+  }
+  .event_el {
+    width: 96%
   }
 }
 /*MEDIA WIDTH <1200*/
@@ -309,6 +350,12 @@ table.event_list th {
   }
   .col-1 {
     min-width: 70px;
+  }
+  .event_el {
+    width: 100%
+  }
+  .event_desc {
+    max-width: 280px;
   }
 }
 /*MEDIA WIDTH <1100px*/
@@ -333,5 +380,8 @@ table.event_list th {
   /*CONTENT*/
   .user_info {
     max-width: 300px;
+  }
+  .event_el {
+    width: 100%
   }
 }
