Revert "028 design electron"

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,37 +1,25 @@
-.sub_header
-  All events
-- @events.each do |e|
-  .event_el
-    .event_name
-      = link_to e.name, event_path(e)
-    .event_date
-      = e.date
-      = e.time.strftime("%H:%M")
-    .event_desc
-      = e.description
-    .event_img
-      = image_tag(e.photo.url(:thumb))
-.pagin_box
-  = paginate @events
-/ %table.event_list 
-/   %tr{:align => "center"}
-/     %th Name:
-/     %th Gender:
-/     %th Tags:
-/     %th Description:
-/     %th
-/   - @events.each do |e|
-/     %tr{:align => "center"}
-/       %td= link_to e.name, event_path(e)
-/       %td= e.gender
-/       %td
-/         - e.tags.each do |t|
-/           =t.name
-/       %td= e.description
-/       - if current_user.events.include?(e) then
-/         %td= link_to "unfollow", unfollow_event_path(e), class: "btn btn-add"
-/       - else
-/         %td= link_to "join", join_event_path(e), class: "btn btn-add"
-/   %tr{:align => "center"}
-/     %td{:colspan => "4"}= link_to "Add new event", new_event_path, class: "btn btn-confirm"
-/     = paginate @events
+.content
+  .sub_header
+    All events
+  %table.event_list 
+    %tr{:align => "center"}
+      %th Name:
+      %th Gender:
+      %th Tags:
+      %th Description:
+      %th
+    - @events.each do |e|
+      %tr{:align => "center"}
+        %td= link_to e.name, event_path(e)
+        %td= e.gender
+        %td
+          - e.tags.each do |t|
+            =t.name
+        %td= e.description
+        - if current_user.events.include?(e) then
+          %td= link_to "unfollow", unfollow_event_path(e), class: "btn btn-add"
+        - else
+          %td= link_to "join", join_event_path(e), class: "btn btn-add"
+    %tr{:align => "center"}
+      %td{:colspan => "4"}= link_to "Add new event", new_event_path, class: "btn btn-confirm"
+      = paginate @events
