--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -6,252 +6,67 @@
   =require twitter-bootstrap-static/fontawesome
   */
 
-html, body { 
-  background-color: #E0FFFF;
-  height: 100%;
+body { 
+  background-color: #F8F8FF;
 }
 
-/*Layout control panel*/
-.main_header {
-  min-height: 60px;
-  height: auto;
-  background-color: #E0FFFF;
-  padding-top: 10px;
-}
-.account_links {
-  position: relative;
-  min-width: 250px;
-  width: 25%;
-  padding: 0 1% 0 1%;
-  float: right;
-}
-.logo {
-  position: relative;
-  width: 75%;
-  padding: 0 1% 0 1%;
-  float: left;
-}
-.control_panel { 
+/* Layout panel */
+.ControlPanel { 
   width: 100%;
-  margin-bottom: 1.0%;
+  margin-bottom: 1em;
   background-color: #5F9EA0;
-  padding: 1.0%;
+  padding: 1em;
   color: #fff;
   text-align: center;
   font-family: 'Candal', sans-serif;
   font-weight: bold;
 }
-.control_panel a {
-  background-color: #5F9EA0;
-  padding: 1% 3% 1% 3%;
-  color: #7FFFD4;
-  font-size: 15.5px;
-  margin-left: -0.3%;
+.ControlPanel a {
+  background-color: #98FB98;
+  padding: 1em 4em 1em 4em;
+  color: #008080; font-size: 15.5px;
+  margin-left: -0.5em;
   text-decoration: none;
 }
-.control_panel a:hover {
-  padding: 1.5% 4% 1.5% 4%;
+.ControlPanel a:hover {
+  padding: 2em 5em 2em 5em;
   color: black;
 }
-.control_panel a.active {
-  background-color: #7FFFD4;
-  padding: 1.1% 3.5% 1.1% 3.5%;
-  color: #008080;
-}
-/*BODY*/
-.content_wrapper {
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  padding-bottom: 40px
-}
-.content {
-  width: 60%;
-  margin: 0 auto;
-  text-align: left;
-  background-color: #F8F8FF;
-  padding-bottom: 50px;
-}
-.banner {
-  width: 16%;
-  min-width: 200px;
-  position: relative;
+.ControlPanel a.active {
   background-color: #5F9EA0;
+  padding: 1em 4em 1em 4em;
+  color: #98FB98;
 }
-.box1 {
-  min-height: 400px;
-  margin-bottom: 20px;
-}
-.box2 {
-  min-height: 400px;
-  margin-bottom: 20px;
-}
-.box3 {
-  min-height: 300px; 
-}
-.left_side {
-  float: left;
-  left: 3%;
-  position: relative;
-}
-.right_side {
-  float: right;
-  right: 3%;
-  position: relative;
-}
-.footer {
-  position: relative;
-  min-height: 40px;
-  margin-top: -40px;
-  width: 100%;
-  background-color: #5F9EA0;
-  text-align: center;
-  font-family: 'Candal', sans-serif;
-  font-weight: bold;
-  margin-left: auto;
-  margin-right: auto;
-  clear: both;
-}
-/*Contents' elements style*/
-.user_avatar {
-  min-width: 300px;
-  width: 30%;
-  height: 400px;
-  margin: 0% 1.5% 1.5% 0%;
-  float: left;
-  text-align: center;
-  margin: 10px 0px 0px 0px;
-}
-.user_info {
-  min-width: 300px;
-  min-height: 300px;
-  width: 60%;
-  float: left;
-  left: 300px;
-  padding: 10px 0px 30px 0px;
-}
-.col-1 {
-  font-family: 'Candal', sans-serif;
-  font-weight: bold;
-  text-align: left;
-  min-width: 100px;
-  width: 30%;
-  float: left;
-  padding: 5px 0px 0px 0px;
-}
-.col-2 {
-  font-family: 'Candal', sans-serif;
-  text-align: left;
-  min-width: 200px;
-  width: 70%;
-  min-height: 25px;
-  float: left;
-  padding: 5px 0px 0px 15px;
-  word-wrap: break-word;
-}
+
 .sub_header {
-  width: 100%;
-  text-align: center;
   font-family: 'Candal', sans-serif;
   font-weight: bold;
   font-size: 35px;
-  padding: 15px 0px 15px 0px;
+  padding-bottom: 15px;
+  margin-left: 100px;
 }
-.divider {
-  width: 100%;
-  background-color: #E0FFFF;
-  height: 20px;
-  display: flex;
+.content {
+  width: 65%;
+  margin: 0 auto;
+  text-align: left;
 }
-.divider_f {
-  width: 100%;
-  background-color: #E0FFFF;
-  height: 40px;
-  bottom: 0px;
-  margin-bottom: -50px;
-}
-.event_el {
-  width: 85%;
-  height: 103px;
-  max-height: 103px;
-  font-family: 'Candal', sans-serif;
-  font-size: 18px;
-  margin: 0px auto 10px auto;
-  border-width: 3px;
-  border-color: #5F9EA0;
-  border-style: outset;
-}
-.event_date {
-  float: left;
-  min-width: 120px;
-  width: 15%;
-  height: 100px;
-  text-align: center;
-  padding-top: 7px;
-  border-top: 0px;
-  border-color: #5F9EA0;
-  border-style: outset;
-}
-.event_name {
-  float: left;
-  min-width: 120px;
-  width: 15%;
-  height: 100px;
-  padding-top: 7px;
-  border-top: 0px;
-  border-color: #5F9EA0;
-  border-style: outset;
-  text-align: center;
-}
-.event_desc {
-  float: left;
-  min-width: 200px;
-  max-width: 50%;
-  height: 100px;
-  font-size: 18px;
-  padding-top: 7px;
-  border-right: 0px;
-  border-top: 0px;
-  border-color: #5F9EA0;
-  border-style: outset;
-  overflow-y: hidden;
-  text-overflow: ellipsis;
-}
-.event_img {
-  float: right;
-  width: 100px;
-  height: 100px;
-  margin-top: -3px;
-  border-top: 0px;
-  border-color: #5F9EA0;
-  border-style: outset;
-}
-.pagin_box {
-  text-align: center;
-  font-size: 20px;
-}
+
 .col-sm-1 {
   font-family: 'Candal', sans-serif;
   font-weight: bold;
   text-align: left;
 }
-.user_edit {
-  position: static;
-  text-align: center;
-  margin: 20px 0px 5px 0px;
-}
 .btn.btn-confirm {
+  margin: 10px 0px 10px 100px;
   font-size: 20px;
   font-family: 'Candal', sans-serif;
   font-weight: bold;
   text-decoration: none;
   user-select: none;
-  outline: none;
-  padding: 4px 30px 4px 30px;
+  outline: none; padding: .2em 1.5em;
   background-color: #5F9EA0;
   border-radius: 0px;
   color: #98FB98;
-  width: auto;
 }
 .btn.btn-confirm:hover {
   background-color: #98FB98;
@@ -269,7 +84,7 @@ html, body {
 }
 .btn.btn-del {
   font-size: 10px;
-  
+  font-family: 'Candal', sans-serif;
   font-weight: bold;
   text-decoration: none;
   user-select: none;
@@ -279,7 +94,7 @@ html, body {
 }
 
 table.event_list td {
-  width: 20%; margin: 0;
+  width: 5%; margin: 0;
   padding: 1px 0px 1px 0px;
   text-align: left;
   font-family: 'Candal', sans-serif;
@@ -289,6 +104,7 @@ table.event_list th {
   font-family: 'Candal', sans-serif;
   font-weight: bold;
 }
+
 #sortable1, #sortable2 {
     border: 2px solid #5F9EA0;
     width: 142px;
@@ -304,84 +120,4 @@ table.event_list th {
     font-size: 1.2em;
     width: 120px;
     border: 1px solid #5F9EA0;
-}
-/*MEDIA WIDTH > 1920px*/
-@media (min-width: 1920px){
-  .content {
-    max-width: 1150px;
-  }
-  .left_side {
-    margin: 0 auto;
-    left: 10%;
-  }
-  .right_side {
-    margin: 0 auto;
-    right: 10%;
-  }
-}
-/*MEDIA WIDTH <1400px*/
-@media (max-width: 1400px){
-  /*BODY*/
-  .left_side {
-    left: 1%;
-  }
-  .right_side {
-    right: 1%;
-  }
-  .event_el {
-    width: 90%
-  }
-}
-/*MEDIA WIDTH <1320*/
-@media (max-width: 1320px){
-  /*CONTENT*/
-  .user_info {
-    max-width: 400px;
-  }
-  .event_el {
-    width: 96%
-  }
-}
-/*MEDIA WIDTH <1200*/
-@media (max-width: 1200px){
-  /*CONTENT*/
-  .user_info {
-    max-width: 340px;
-  }
-  .col-1 {
-    min-width: 70px;
-  }
-  .event_el {
-    width: 100%
-  }
-  .event_desc {
-    max-width: 280px;
-  }
-}
-/*MEDIA WIDTH <1100px*/
-@media (max-width: 1100px){
-  /*BODY*/
-  .content {
-    min-width: 630px;
-    margin: 0 200px 0 200px; 
-  }
-  .left_side {
-    left: 0%;
-  }
-  .right_side {
-    right: 0%;
-  }
-  .content_wrapper {
-    min-width: 1030px;
-  }
-  .footer {
-    min-width: 1030px;
-  }
-  /*CONTENT*/
-  .user_info {
-    max-width: 300px;
-  }
-  .event_el {
-    width: 100%
-  }
 }
