--- a/app/views/events/edit.html.haml
+++ b/app/views/events/edit.html.haml
@@ -1,122 +1,123 @@
-.sub_header
-  Edit event
-= form_for @event do |e|
-  .form-group
-    = e.label :name, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.text_field :name, autofocus: true, class: 'form-control'
-  %br
-  %br
-  .form-group
-    = e.label :date, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.date_select :date, class: 'form-control'
-  %br
-  .form-group
-    = e.label :time, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.time_select :time, class: 'form-control'
-    %br
-  .form-group
-    = e.label :description, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.text_area :description, class: 'form-control'
+.content
+  .sub_header
+    Edit event
+  = form_for @event do |e|
+    .form-group
+      = e.label :name, class: "col-sm-1 control-label"
+      .col-sm-5
+        = e.text_field :name, autofocus: true, class: 'form-control'
     %br
     %br
+    .form-group
+      = e.label :date, class: "col-sm-1 control-label"
+      .col-sm-5
+        = e.date_select :date, class: 'form-control'
     %br
-  .form-group
-    = e.label :gender, class: 'col-sm-1 control-label'
-    .col-sm-5
-      = radio_button("event", "gender", "Male")
-      = label_tag :gender, "Male"
-      = radio_button("event", "gender", "Female")
-      = label_tag :gender, "Female"
-      = radio_button("event", "gender", "NA")
-      = label_tag :gender, "Not sure"
-    %br
-  .form-group
-    = e.label :number, class: 'col-sm-1 control-label'
-    .col-sm-5
-      = e.number_field :number, class: 'form-control'
-    %br
-  .form-group
-    = e.label :age, class: 'col-sm-1 control-label'
-    .col-sm-2
-      = e.number_field :agemin, class: 'form-control'
-    .col-sm-2
-      = e.number_field :agemax, class: 'form-control'
-    %br
-    %br
-  .form-group
-    = e.label :place, class: 'col-sm-1 control-label'
-    / Set height and width with CSS
-    #googleMap{:style => "height:300px;width:450px;"}
-    / Add Google Maps
+    .form-group
+      = e.label :time, class: "col-sm-1 control-label"
+      .col-sm-5
+        = e.time_select :time, class: 'form-control'
+      %br
+    .form-group
+      = e.label :description, class: "col-sm-1 control-label"
+      .col-sm-5
+        = e.text_area :description, class: 'form-control'
+      %br
+      %br
+      %br
+    .form-group
+      = e.label :gender, class: 'col-sm-1 control-label'
+      .col-sm-5
+        = radio_button("event", "gender", "Male")
+        = label_tag :gender, "Male"
+        = radio_button("event", "gender", "Female")
+        = label_tag :gender, "Female"
+        = radio_button("event", "gender", "NA")
+        = label_tag :gender, "Not sure"
+      %br
+    .form-group
+      = e.label :number, class: 'col-sm-1 control-label'
+      .col-sm-5
+        = e.number_field :number, class: 'form-control'
+      %br
+    .form-group
+      = e.label :age, class: 'col-sm-1 control-label'
+      .col-sm-2
+        = e.number_field :agemin, class: 'form-control'
+      .col-sm-2
+        = e.number_field :agemax, class: 'form-control'
+      %br
+      %br
+    .form-group
+      = e.label :place, class: 'col-sm-1 control-label'
+      / Set height and width with CSS
+      #googleMap{:style => "height:300px;width:450px;"}
+      / Add Google Maps
 
-    :javascript
-      var map;
-      function initMap() {
-        var myCenter = {lat: #{@event.latitude}, lng: #{@event.longitude}};
-        map = new google.maps.Map(document.getElementById('googleMap'), {
-          center: myCenter,
-          zoom: 12
-        });
+      :javascript
+        var map;
+        function initMap() {
+          var myCenter = {lat: #{@event.latitude}, lng: #{@event.longitude}};
+          map = new google.maps.Map(document.getElementById('googleMap'), {
+            center: myCenter,
+            zoom: 12
+          });
 
-        var marker = new google.maps.Marker({
-          position: myCenter,
-          map: map,
-          draggable: true,
-          animation: google.maps.Animation.DROP,
-          title: 'Hello World!'
-        });
+          var marker = new google.maps.Marker({
+            position: myCenter,
+            map: map,
+            draggable: true,
+            animation: google.maps.Animation.DROP,
+            title: 'Hello World!'
+          });
 
-        google.maps.event.addListener(marker, "dragend", function(a) {
-          lat = a.latLng.lat();
-          lng = a.latLng.lng();
-          document.getElementById("event_latitude").value = lat;
-          document.getElementById("event_longitude").value = lng;
+          google.maps.event.addListener(marker, "dragend", function(a) {
+            lat = a.latLng.lat();
+            lng = a.latLng.lng();
+            document.getElementById("event_latitude").value = lat;
+            document.getElementById("event_longitude").value = lng;
 
-        });
+          });
 
-      $(function() {
-        $( "#sortable1, #sortable2" ).sortable({
-          connectWith: ".connectedSortable"
-        }).disableSelection();
         $(function() {
-          $('.edit_event').submit(function() {
-              tag_list = document.getElementById("sortable1");
-              var element = tag_list.children;
-              var tags = [];
-              for (var i = 0; i < element.length; i++) {
-                tags += element[i].innerHTML;
-                tags += ",";
-              }
-              document.getElementById("event_tags").value = tags;
-              return true;
-            });
+          $( "#sortable1, #sortable2" ).sortable({
+            connectWith: ".connectedSortable"
+          }).disableSelection();
+          $(function() {
+            $('.edit_event').submit(function() {
+                tag_list = document.getElementById("sortable1");
+                var element = tag_list.children;
+                var tags = [];
+                for (var i = 0; i < element.length; i++) {
+                  tags += element[i].innerHTML;
+                  tags += ",";
+                }
+                document.getElementById("event_tags").value = tags;
+                return true;
+              });
+          });
         });
-      });
 
-      }
-    %script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"} 
-    .col-sm-1
-      = e.hidden_field :latitude, class: 'form-control'
-    .col-sm-1
-      = e.hidden_field :longitude, class: 'form-control'
-  .form-group
-    = e.label :tags, class: 'col-sm-1 control-label'
-    .col-sm-11
-      %ul#sortable1.connectedSortable
-        - @event.tags.each do |t|
-          %li.ui-state-default #{t.name}
-      %ul#sortable2.connectedSortable
-        - (@tags-@event.tags).each do |t|
-          %li.ui-state-highlight #{t.name}
-      = e.hidden_field :tags
-  %br
-  .form-group
-    = e.label :photo, class: "col-sm-1"
-    .col-sm-5
-      = e.file_field :photo
+        }
+      %script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"} 
+      .col-sm-1
+        = e.hidden_field :latitude, class: 'form-control'
+      .col-sm-1
+        = e.hidden_field :longitude, class: 'form-control'
+    .form-group
+      = e.label :tags, class: 'col-sm-1 control-label'
+      .col-sm-11
+        %ul#sortable1.connectedSortable
+          - @event.tags.each do |t|
+            %li.ui-state-default #{t.name}
+        %ul#sortable2.connectedSortable
+          - (@tags-@event.tags).each do |t|
+            %li.ui-state-highlight #{t.name}
+        = e.hidden_field :tags
     %br
-  = e.submit "Save", class: "btn btn-confirm"
+    .form-group
+      = e.label :photo, class: "col-sm-1"
+      .col-sm-5
+        = e.file_field :photo
+      %br
+    = e.submit "Save", class: "btn btn-confirm"
