--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,70 +1,83 @@
-.user_avatar
-  = image_tag(@user.avatar.url(:medium))
-  .user_edit
-    = link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm user_edit"
-.user_info
-  .col-1
+.content 
+  %br
+    = image_tag(@user.avatar.url(:thumb), class: 'img-circle')
+  .col-sm-1
     Name:
-  .col-2
+  .col-sm-3
     = @user.name
-  .col-1
+  %br
+  .col-sm-1
     Surname:
-  .col-2
+  .col-sm-3
     = @user.surname
-  .col-1
+  %br
+  .col-sm-1
     Email:
-  .col-2
+  .col-sm-3
     = @user.email
-  .col-1
+  %br
+  .col-sm-1
     Birthday:
-  .col-2
+  .col-sm-3
     = @user.bday
-  .col-1
+  %br
+  .col-sm-1
     Gender:
-  .col-2
+  .col-sm-3
     = @user.gender
-  .col-1
+  %br
+  .col-sm-1
     Country:
-  .col-2
+  .col-sm-3
     = @user.country_
-  .col-1
+  %br
+  .col-sm-1
     City:
-  .col-2
+  .col-sm-3
     = @user.city_
-  .col-1
+  %br
+  .col-sm-1
     Phone:
-  .col-2
+  .col-sm-3
     = @user.phone
-  .col-1
+  %br
+  .col-sm-1
     Hobby:
-  .col-2.text_area
+  .col-sm-3
     = @user.hobby
-  .col-1
+  %br
+  .col-sm-1
     About:
-  .col-2.text_area
+  .col-sm-3
     = @user.about
-  .col-1
+  %br
+  .col-sm-1
     Tags:
   - if @user.tags.empty?
     No tags
   - else
-    .col-2
+    .col-sm-3
       - @user.tags.each do |t|
         = t.name
-.divider
-.sub_header
-  Your events
-- @events.each do |e|
-  .event_el
-    .event_name
-      = link_to e.name, event_path(e)
-    .event_date
-      = e.date
-      = e.time.strftime("%H:%M")
-    .event_desc
-      = e.description
-    .event_img
-      = image_tag(e.photo.url(:thumb))
-.pagin_box
+  %br
+  %br
+  %br
+  = link_to "Edit profile", edit_user_path(current_user), class: "btn btn-confirm"
+  .sub_header
+    Your events
+  %table.event_list
+    %tr{:align => "center"}
+      %th Name:
+      %th Gender:
+      %th Type:
+      %th Description:
+    - @events.each do |e|
+      %tr{:align => "center"}
+        %td= link_to e.name, event_path(e)
+        %td= e.gender
+        %td
+          - e.tags.each do |t|
+            =t.name
+        %td= e.description
+        %td= link_to "unfollow", unfollow_event_path(e)
   = paginate @events
-.divider_f
